--- a/templates/bundles/FOSUserBundle/Registration/register_content.html.twig
+++ b/templates/bundles/FOSUserBundle/Registration/register_content.html.twig
@@ -2,25 +2,25 @@
 
 {% block body %}
 
-    <form id="register" action="action_page.php">
-
-    
+    <form id="register" method="post" action="/register/">
       <div class="container">
-        <label for="uname"><b>Username</b></label>
+      	<label for="email"><b>E-mail address</b></label>
+      	<input type="email" placeholder="Enter e-mail address" name="email" required>
+      
+        <label for="username"><b>Username</b></label>
         <input type="text" placeholder="Enter Username" name="uname" required>
     
         <label for="psw"><b>Password</b></label>
         <input type="password" placeholder="Enter Password" name="psw" required>
+        
+        <label for="psw-repeat"><b>Repeat Password</b></label>
+    	<input type="password" placeholder="Repeat Password" name="psw-repeat" required>	
     
-        <button type="submit">Login</button>
-        <label>
-          <input type="checkbox" checked="checked" name="remember"> Remember me
-        </label>
+        <button type="submit">Register</button>
       </div>
-    
-      <div class="container" style="background-color:#f1f1f1">
-        <button type="button" class="cancelbtn">Cancel</button>
-        <span class="psw">Forgot <a href="#">password?</a></span>
+      
+      <div class="container signin">
+        <p>Already have an account? <a href="#">Sign in</a>.</p>
       </div>
     </form>
     
