--- a/templates/homepage.html.twig
+++ b/templates/homepage.html.twig
@@ -6,11 +6,25 @@ homepage
 
 
 {% block body %}
+<form>
+        <div class="form-group row">
+            <label for="tagSearch" class="col-sm-2 col-form-label">Search for Tag</label>
+            <div class="col-sm-10 row">
+            	<input type="text" class="form-control col-sm-9" id="tagSearch">
+    			<button class="btn btn-outline-success col-sm-2" type="button" id="tagSearchButton">Search</button>
+            </div>
+        </div>
+	</form>
+	
+	<ul id="searchResults">
+	
+	</ul>
+
 <main class="container">
 <section class="row create">
 	<div class="col-sm-12 formComp">
 	
-		{% include 'bundles/FOSUserBundle/Security/login_content.html.twig' %}
+		
 	</div>
 </section>
 <hr>
@@ -88,5 +102,15 @@ homepage
 
 
 {% block javascripts %}
+{{ parent() }}
+	<script src="/js/searchTagClass.js"></script>
+	<script type="text/javascript">
+    	let client = new Client(
+    		document.getElementById('tagSearchButton'),
+    		document.getElementById('tagSearch'),
+    		document.getElementById('searchResults')
+    	);
+    	client.start();
+	</script>
 
 {% endblock %}
