--- a/templates/about.html.twig
+++ b/templates/about.html.twig
@@ -1,7 +1,9 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-{{ dump(encounters) }}
+{{ dump(request) }}
+{{ dump(solution) }}
+
 	<p>Placeholder: Made with love!</p>
 {% endblock %}
 	
