--- a/templates/Competition/create.html.twig
+++ b/templates/Competition/create.html.twig
@@ -4,6 +4,35 @@
 
 <main class="container">
 <div class="row create">
+	<form method="POST">
+      <div class="form-group">
+        <label for="name">Competition name : </label>
+        <input type="text" class="form-control" name="name" placeholder="Name your competition">
+      </div>
+      <div class="form-group form-check">
+        <input type="checkbox" class="form-check-input" name="homeVisitor">
+        <label class="form-check-label" for="homeVisitor">Home/Visitor</label>
+      </div>
+      <div class="form-group">
+        <label for="location">Location : </label>
+        <input type="text" class="form-control" name="location" placeholder="Competition location">
+      </div>
+      <div class="form-group">
+        <label for="tag">Tag : </label>
+        <div id="tags">
+        	<input type="text" class="form-control" name="tag1" id="tag1">
+        </div>
+        <button class="btn btn-success" id="btnTag" type="button">+</button>
+      </div>
+      <div class="form-group">
+        <label for="competitor">Competitors : </label>
+        <div id=competitors>
+        	<input type="text" class="form-control" name="competitor1" id="competitor1">
+        </div>
+        <button class="btn btn-success" id="btnCompetitor">+</button>
+      </div>
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
 </div>
 </main>
 
