--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -42,5 +42,6 @@
 		integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
 		crossorigin="anonymous"></script>
 	<script src="/js/script.js"></script>
+	<script src="/js/addInputs.js"></script>
 	{% endblock %}
 </body>
