forgot to add most of my work

--- a/templates/Competition/create.html.twig
+++ b/templates/Competition/create.html.twig
@@ -32,6 +32,8 @@
         <button class="btn btn-success" id="btnCompetitor">+</button>
       </div>
       <button type="submit" class="btn btn-primary">Submit</button>
+      <input type="hidden" name="tagData" id="tagData" />
+      <input type="hidden" name="competitorData" id="competitorData" />
     </form>
 </div>
 </main>
