--- a/templates/about.html.twig
+++ b/templates/about.html.twig
@@ -2,7 +2,10 @@
 
 {% block body %}
 {{ dump(request) }}
-{{ dump(solution) }}
+{{ dump(session) }}
+{{ dump(league) }}
+
+
 
 	<p>Placeholder: Made with love!</p>
 {% endblock %}
