--- a/templates/Competition/create.html.twig
+++ b/templates/Competition/create.html.twig
@@ -5,6 +5,7 @@
 <main class="container">
 <div class="row create">
 	<form method="POST">
+	{{ error }}
       <div class="form-group">
         <label for="name">Competition name : </label>
         <input type="text" class="form-control" name="name" placeholder="Name your competition">
