--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -1,5 +1,3 @@
-
-
 <article class="home">
 	<header class="container-fluid">
 		<div class="row p-2 tete">
@@ -13,8 +11,8 @@
 			<div class="col-sm-6 col-sm-offset-3 search">
 				<div id="imaginary_container">
 					<div class="input-group stylish-input-group">
-						<input type="text" class="form-control" placeholder="Search">
-						<button type="submit" class="btn btn-success">Search</button>
+						<input type="text" class="form-control" placeholder="Search" id="competitionSearch">
+						<button type="button" class="btn btn-success" id="competitionSearchButton">Search</button>
 					</div>
 				</div>
 			</div>
