--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,3 @@
-
-
 @media (min-width: 300px) and (max-width: 767.98px) {
 
     .logo{
@@ -67,13 +65,13 @@ p, h2, h3 {
 
 .news {
     background: #354141;
-      position: relative;
-      overflow: hidden;
-      z-index:1;
-      transition: all 0.5s ease;	
+    position: relative;
+    overflow: hidden;
+    z-index:1;
+    transition: all 0.5s ease;	
     color: #4A4A4A;
-      border: 1px solid #E8E8E8;
-      border-radius: 0.5rem;
+    border: 1px solid #E8E8E8;
+    border-radius: 0.5rem;
   }
   
   .news:hover{
@@ -120,13 +118,13 @@ p, h2, h3 {
       font-size: 19px;
       color: #4A4A4A;
       text-align: left;
-    transition: all 0.5s ease;	
+      transition: all 0.5s ease;	
   }
   
   .news:hover .title  {
       margin-top: -100px;
       background: #fff;
-    cursor:pointer;
+      cursor:pointer;
   }
   
   
@@ -148,12 +146,12 @@ p, h2, h3 {
   
   .news:hover p.description  {
       opacity: 1;
-    margin-top: -10px;
+      margin-top: -10px;
   }
   
   p.more {
       text-align: left;
-    margin-left:20px;
+      margin-left:20px;
   }
   
   .more a {
@@ -187,8 +185,8 @@ p, h2, h3 {
       top: 20px;
       z-index: 1;
       padding: 6px 16px;
-    opacity:.8;
-    transition: all 0.5s ease;	
+      opacity:.8;
+      transition: all 0.5s ease;	
   }
   /**form create competition**/
   form[name=competition_form]{
@@ -226,5 +224,48 @@ p, h2, h3 {
 footer {
     background-color: #354141;
     box-shadow: 4px 6px rgb(184, 5, 5);
+    position: absolute;
+    bottom: 0;
 } 
 
+#registerTitle {
+	color: rgb(184, 5, 5);
+	text-align: center;
+	text-decoration: underline;
+	margin-bottom: 30px;
+}
+
+#registerForm {
+	border: 3px solid rgb(184, 5, 5);
+	border-radius: 1rem;
+	padding: 10px;
+	color: white;
+}
+
+#fos_user_registration_form div {
+	display: flex;
+	justify-content: space-between;
+}
+
+#fos_user_registration_form div input {
+	margin-bottom: 10px;
+	margin-left: 7px;
+}
+
+#loginTitle {
+	color: rgb(184, 5, 5);
+	text-align: center;
+	text-decoration: underline;
+	margin-bottom: 30px;
+}
+
+#loginForm {
+	border: 3px solid rgb(184, 5, 5);
+	border-radius: 1rem;
+	padding: 10px;
+	color: white;
+}
+
+#loginForm form {
+	display: block;
+}
