--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,15 +21,10 @@
 	{% include 'navbar.html.twig' %}
 	{% endblock %}
 	
-  	<div class="container p-1">
-    		{% for category,  flashMessages in app.session.flashbag.all() %}
-    			{% if category == 'success' %}{% set class="alert-success" %}{% endif %}
-    			
-    			<div class="alert {{ class }}" role="alert">
-    				{{ flashMessages|join(',') }}
-    			</div>
-    		{% endfor %}
-	</div>
+	{% block search %}
+	{% include 'search.html.twig' %}
+	{% endblock %}
+	
 	{% block body %}
 
 	{% endblock %}
@@ -40,17 +35,15 @@
 	{% endblock %}
 
 	{% block javascripts %}
-	<script
-		src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
-	<script
-		src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
 		integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
 		crossorigin="anonymous"></script>
-	<script
-		src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
 		integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
 		crossorigin="anonymous"></script>
 	<script src="/js/script.js"></script>
 	<script src="/js/addInputs.js"></script>
+	<script src="/js/searchTagJquery.js"></script>
 	{% endblock %}
 </body>
