--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -5,22 +5,22 @@
 			{% set route = app.request.get('_route') %}
 			
 			<li class="nav-item{% if route == 'create_competition' %} active{% endif %}">
-				<a class="nav-link" href="{{ path('create_competition') }}">Create a competition</a>
+				<a class="nav-link" href="{{ path('create_competition') }}">{{ 'Create a competition'|trans }}</a>
 			</li>
 
-      		{% if not is_granted('ROLE_AUTHENTICATED_FULLY') %}
+      		{% if not is_granted('IS_AUTHENTICATED_FULLY') %}
       		<li class="nav-item{% if route == 'fos_user_registration_register' %} active{% endif %}">
-        		<a class="nav-link" href="{{ path('fos_user_registration_register') }}">Register</a>
+        		<a class="nav-link" href="{{ path('fos_user_registration_register') }}">{{ 'Register'|trans }}</a>
       		</li>
       		
       		<li class="nav-item{% if route == 'fos_user_security_login' %} active{% endif %}">
-        		<a class="nav-link" href="{{ path("fos_user_security_login") }}">Login</a>
+        		<a class="nav-link" href="{{ path("fos_user_security_login") }}">{{ 'Login'|trans }}</a>
       		</li>
       		{% endif %}
       		
-      		{% if is_granted('ROLE_AUTHENTICATED_FULLY') %}
-      		<li class="nav-item{% if route == 'logout' %} active{% endif %}">
-        		<a class="nav-link" href="{{ path("logout") }}">Logout</a>
+      		{% if is_granted('IS_AUTHENTICATED_FULLY') %}
+      		<li class="nav-item">
+        		<a class="nav-link" href="{{ path("logout") }}">{{ 'Logout'|trans }}</a>
       		</li>
       		{% endif %}
       		
