Link to Homepage on the logo

--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -2,7 +2,9 @@
 	<header class="container-fluid">
 		<div class="row p-2 tete">
 			<div class="logo col-1 col-sm-1">
-				<img class="img-fluid" alt="LeagueMaker logo" src="/images/logo.png">
+				<a href="{{ path('homepage') }}">
+					<img class="img-fluid" alt="LeagueMaker logo" src="/images/logo.png">
+				</a>
 			</div>
 			<div class="col-sm-5">
 				<h4>LeagueMaker</h4>
