tag search good

--- a/templates/homepage.html.twig
+++ b/templates/homepage.html.twig
@@ -10,8 +10,9 @@ homepage
 <main class="container">
 <section class="row create">
 	<div class="col-sm-12 formComp">
+		<ul id="searchResults">
 	
-		
+		</ul>	
 	</div>
 </section>
 <hr>
@@ -21,7 +22,7 @@ homepage
 			<div class="news">
 				<div class="img-figure">
 					<img
-						src="http://www.lfricambi724.it/media/cache/lb/600/a5a2efa3-fb66-1654-2603-21738785e5d7_fiera%20dublino%202.jpg"
+						src=""
 						class="img-responsive">
 				</div>
 
@@ -42,7 +43,7 @@ homepage
 			<div class="news">
 				<div class="img-figure">
 					<img
-						src="http://www.lfricambi724.it/media/cache/lb/600/a5a2efa3-fb66-1654-2603-21738785e5d7_fiera%20dublino%202.jpg"
+						src=""
 						class="img-responsive">
 				</div>
 
@@ -63,7 +64,7 @@ homepage
 			<div class="news">
 				<div class="img-figure">
 					<img
-						src="http://www.lfricambi724.it/media/cache/lb/600/a5a2efa3-fb66-1654-2603-21738785e5d7_fiera%20dublino%202.jpg"
+						src=""
 						class="img-responsive">
 				</div>
 
