--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,8 +2,11 @@
 
 @media (min-width: 300px) and (max-width: 767.98px) {
 
+	header{
+	display: flex;
+	}
     .logo{
-        display: none;
+        width: 3rem;
     }
 
     .container .create {
