--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -1,5 +1,5 @@
 
-<footer class="container-fluid">
+<footer class="container-fluid fixed-bottom">
 	<hr>
 	<div class="row copy">
 		<p>&copy;LeagueMaker 2018 - WebForce3</p>
