Functional Mapbox in List, doing the same in view now

--- a/templates/Competition/list.html.twig
+++ b/templates/Competition/list.html.twig
@@ -20,5 +20,9 @@
 			{% endfor %}
 		</tbody>
 	</table>
+	
+	<div id="mapContainer">
+        {% include 'mapbox.html.twig' %}
+	</div>
 
 {% endblock %}
