--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,15 +2,32 @@
 <html>
 
 <head>
-<meta charset="UTF-8">
-<title>{% block title %}LeagueMaker{% endblock %}</title>
-{% block stylesheets %}
-<link rel="stylesheet"
-	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-	integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-	crossorigin="anonymous">
-<link rel="stylesheet" href="/css/style.css">
-{% endblock %}
+    <meta charset="UTF-8">
+    <title>{% block title %}LeagueMaker{% endblock %}</title>
+    {% block stylesheets %}
+    <link rel="stylesheet"
+    	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+    	integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+    	crossorigin="anonymous">
+    <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.51.0/mapbox-gl.js'></script>
+    <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.51.0/mapbox-gl.css' rel='stylesheet' />
+    <link rel="stylesheet" href="/css/style.css">
+        <style>
+        #mapContainer {
+        	display: block;
+        	position: relative;
+        	height: 500px;
+        	}
+        #map {
+            position: absolute;
+            top: 0%;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 50%;
+            height: 450px;
+        }
+    </style>
+    {% endblock %}
 </head>
 <body>
 	{% block header %}
