--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -4,7 +4,7 @@
     <span class="navbar-toggler-icon"></span>
   </button>
 	<div class="collapse navbar-collapse" id="navbarSupportedContent">
-		<ul class="navbar-nav mr-auto">
+		<ul class="navbar-nav ml-auto">
 			{% set route = app.request.get('_route') %}
 
   			<li class="nav-item{% if route == 'about' %} active{% endif %}">
