--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,5 @@
 @media (min-width: 300px) and (max-width: 767.98px) {
 
-	header{
-	display: flex;
-	}
     .logo{
         width: 3rem;
     }
@@ -229,6 +226,7 @@ footer {
     box-shadow: 4px 6px rgb(184, 5, 5);
 } 
 
+/**Register**/
 #registerTitle {
 	color: rgb(184, 5, 5);
 	text-align: center;
@@ -253,6 +251,7 @@ footer {
 	margin-left: 7px;
 }
 
+/**Login**/
 #loginTitle {
 	color: rgb(184, 5, 5);
 	text-align: center;
@@ -273,4 +272,13 @@ footer {
 
 #remember_me {
 	margin-top: 10px;
+}
+
+/**SearchResults**/
+#search {
+	margin-top: 10px;	
+}
+
+#searchResults {
+	display: none;
 }
