--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,7 +12,7 @@
 <link rel="stylesheet" href="/css/style.css">
 {% endblock %}
 </head>
-<body class="container-fluid">
+<body>
 	{% block header %}
 	{% include 'header.html.twig' %}
 	{% endblock %}
@@ -20,13 +20,9 @@
 	{% block navbar %}
 	{% include 'navbar.html.twig' %}
 	{% endblock %}
-	
-	{% block search %}
-	{% include 'search.html.twig' %}
-	{% endblock %}
-	
+
 	{% block body %}
-	
+
 	{% endblock %}
 
 	{% block footer %}
@@ -34,14 +30,19 @@
 	{% endblock %}
 
 	{% block javascripts %}
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+	<script
+		src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
+	<script
+		src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
 		integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
 		crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+	<script
+		src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
 		integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
 		crossorigin="anonymous"></script>
-	<script src="/js/script.js"></script>
+	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"
+		integrity="sha256-T0Vest3yCU7pafRw9r+settMBX6JkKN06dqBnpQ8d30="
+		crossorigin="anonymous"></script>
 	<script src="/js/addInputs.js"></script>
 	<script src="/js/searchTagJquery.js"></script>
 	{% endblock %}
