--- a/public/css/style.css
+++ b/public/css/style.css
@@ -46,154 +46,25 @@ p, h2, h3 {
     box-shadow: 4px 6px rgb(184, 5, 5);
 }
 
-.create{
-    padding: 2rem;
-    background-color: #354141;
-    border-radius: 1rem;
-    margin: 2rem auto;
-    width: 50%;
-    box-shadow: 4px 6px rgb(184, 5, 5);
-}
-
 /**cards**/
-.cardManage, .cardInvite, .cardCreate{
+.card{
     padding-top: 0.3rem;
     padding-bottom: 0.3rem;
     text-align: center;
-   
+    background-color: lightgrey;
+    border-radius: 10px;
 }
 
-.news {
-    background: #354141;
-    position: relative;
-    overflow: hidden;
-    z-index:1;
-    transition: all 0.5s ease;	
-    color: #4A4A4A;
-    border: 1px solid #E8E8E8;
-    border-radius: 0.5rem;
-  }
-  
-  .news:hover{
-    box-shadow: 0px 21px 36px -14px rgba(220,220,220,1);;
-  
-  }
-  
-  
-  .news .img-figure {
-      position: relative;
-  }
-  
-  .news .img-figure img {
-      position: relative;	
-      overflow: hidden;
-      transition: all 1s ease;
-  }
-  
-  .news:hover .img-figure img {
-      transform: scale(1.10);
-  }
-  
-  .news .title {
-      /*padding: 29px 30px;*/
-      padding: 20px 20px;
-      position: absolute;
-      left: 0;
-      background: #fff;
-      width: 100%;
-      height: 100%;
-      transition: all 0.5s ease;	
-  }
-  
-  
-  .news .title {
-    font-size:12px;
-    color:#929292;
-  
-  }
-  .news .title h1 {
-      margin: 10px 0 0;
-      text-transform: uppercase;
-      font-weight: bold;
-      font-size: 19px;
-      color: #4A4A4A;
-      text-align: left;
-      transition: all 0.5s ease;	
-  }
-  
-  .news:hover .title  {
-      margin-top: -100px;
-      background: #fff;
-      cursor:pointer;
-  }
-  
-  
-  .news:hover .title h1  {
-    color: #0085FF; 
-  }
-  
-  .news  p.description {
-      position: relative;
-      font-weight: normal;
-      line-height: 22px;
-      opacity: 0;
-  
-      text-align: left;
-  
-      padding: 15px 20px 0px 20px;
-      transition: all 0.5s ease;	
-  }
-  
-  .news:hover p.description  {
-      opacity: 1;
-      margin-top: -10px;
-  }
-  
-  p.more {
-      text-align: left;
-      margin-left:20px;
-  }
-  
-  .more a {
-      position: relative;
-      font-size: 13px;
-      margin-top: 30px;
-      display: block;
-      -o-transition: all 0.5s ease;
-      transition: all 0.5s ease;
-      display: inline-block;
-      color: #929292;
-      padding: 6px 16px;
-      border: 1px solid #929292;
-      text-decoration: none;
-  }
-  
-  
-  .news:hover .more a {
-    background:#4A4A4A;
-    color:white;
-  }
-  
-  
-  
-  .cat {
-      background: #DCDCDC;
-      color: #4A4A4A;
-      text-transform: uppercase;
-      position: absolute;
-      left: 0;
-      top: 20px;
-      z-index: 1;
-      padding: 6px 16px;
-      opacity:.8;
-      transition: all 0.5s ease;	
-  }
-  /**form create competition**/
-  form[name=competition_form]{
-  padding: 0.5rem;
-  margin: 0 auto;
-  
-  }
+.card h5 {
+	color: black;
+}
+
+ /**form create competition**/
+ form[name=competition_form]{
+ padding: 0.5rem;
+ margin: 0 auto;
+ 
+ }
 #competition_form label{
 	margin-right: 1rem;
 	font-size: 1.2rem;
@@ -285,5 +156,22 @@ footer {
 
 /**Information for new users**/
 #information {
-	margin-bottom: 10px;
+	margin-bottom: 30px;
+	margin-top: 30px;
+	border: 3px solid rgb(184, 5, 5);
+	border-radius: 1rem;
+	padding: 10px;
+	text-align: center;
+}
+
+#information ul {
+	list-style: none;
+}
+
+#information ul li {
+	color: white;
+}
+
+#information ul li b {
+	color: black;
 }
