--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -1,14 +1,13 @@
-	<header class="container-fluid">
-		<div class="row p-2 tete">
-			<div class="logo col-1 col-sm-1">
-				<a href="{{ path('homepage') }}">
-					<img class="img-fluid" alt="LeagueMaker logo" src="/images/logo.png">
-				</a>
-			</div>
-			<div class="col-sm-5">
-				<h4>LeagueMaker</h4>
-				<p>Create your competition!</p>
-			</div>
+<header class="container-fluid">
+	<div class="row p-2 tete">
+		<div class="logo col-1 col-sm-1">
+			<a href="{{ path('homepage') }}">
+				<img class="img-fluid" alt="LeagueMaker logo" src="/images/logo.png" id="image">
+			</a>
 		</div>
-	</header>
-
+		<div class="col-sm-5">
+			<h4>LeagueMaker</h4>
+			<p>Create your competition!</p>
+		</div>
+	</div>
+</header>
