--- a/templates/homepage.html.twig
+++ b/templates/homepage.html.twig
@@ -13,7 +13,7 @@
     				<li>Players <b>register via LeagueMaker</b> for the competition.</li>
     				<li>Generation of an <b>optimized</b> format for the pleasure of all players.</li>
     				<li>Players enter their <b>own results</b>. The organizer moderates if necessary.</li>
-    				<li>Ranking is <b>generated on LeagueMaker.</b></li>
+    				<li>Ranking and scoreboard are <b>generated on LeagueMaker.</b></li>
     			</ul>
     			<a href="{{ path("fos_user_security_login") }}">
     				<button type="button" class="btn btn-primary btn-lg">Log in to create a competition</button>
