--- a/templates/mapbox.html.twig
+++ b/templates/mapbox.html.twig
@@ -14,7 +14,7 @@
             accessToken: mapboxgl.accessToken
         });
         mapboxClient.geocoding.forwardGeocode({
-                query: 'Technoport, Avenue des Hauts-Fourneaux 9, Esch-sur-Alzette, Luxembourg, Luxembourg',
+                query: {{ location }},
                 autocomplete: false,
                 limit: 1
             })
