--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,8 +11,8 @@
     	crossorigin="anonymous">
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.51.0/mapbox-gl.js'></script>
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.51.0/mapbox-gl.css' rel='stylesheet' />
-	<link rel="stylesheet" href="/css/style.css"/>  
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.1.3/sketchy/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.1.3/solar/bootstrap.min.css">
+	<link rel="stylesheet" href="/css/style.css"/>
     
         <style>
         #mapContainer {
@@ -23,7 +23,7 @@
         	}
         #map {
             position: absolute;
-            top: 10%%;
+            top: 10%;
             left: 50%;
             transform: translateX(-50%);
             width: 50%;
