Ready CSS - awaiting Mapbox

--- a/templates/Competition/view.html.twig
+++ b/templates/Competition/view.html.twig
@@ -35,7 +35,7 @@
         		<section class="matchDay">
                 	<table>
                 		<thead>
-                			<th class="">{{ matchday[0] }}</th>
+                			<th class="tHead">{{ matchday[0] }}</th>
                 		</thead>
                     		<tbody>
                     			{% for encounter in matchday[1]  %}
